--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,58 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+body {
+    background: white;
+}
+
+.card {
+    width: 400px;
+    margin: auto;
+    padding: 10px;
+}
+
+.card-padding{
+    padding: 10px;
+}
+.post-padding{
+    margin: auto;
+}
+
+.list {
+  background: #fff;
+  border-radius: 2px;
+  display: block;
+  height: auto;
+  margin: auto;
+  margin-bottom: 1rem;
+
+  width: 400px;
+  padding: 10px;
+}
+
+.list-1 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.list-1:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
+
+.form-style {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin:auto;
+    display: block;
+    text-align: center;
+    width: 400px;
+}
